# prompt-injection-detection-prototype

./: .env.example  .env.local.example  .gitattributes  .gitignore  .lycheeignore  .nojekyll  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CLAUDE.html  CLAUDE.md  EVIDENCE.html  EVIDENCE.md  EXECUTIVE_SUMMARY.html  EXECUTIVE_SUMMARY.md  Makefile  NEXT_STEPS.html  NEXT_STEPS.md  READING_GUIDE.html  READING_GUIDE.md  README.html  README.md  REPO_AUDIT_2026-05-18.md  RESULTS.html  RESULTS.md  SPEC_GREENFIELD.md  SPEC_SHEET.html  SPEC_SHEET.md  SPEC_STRATEGY.md  STYLE.md  SUBMISSION.md  SUBMISSION_AUDIT.html  SUBMISSION_AUDIT.md  SUBMISSION_TEMPLATE.md  WRITEUP.html  WRITEUP.md  WRITEUP_NARRATIVE.html  WRITEUP_NARRATIVE.md  (+14 more)
.claude/: settings.json
.github/workflows/: audit-writeup.yml  ci.yml  link-check.yml  publish.yml
WRITEUP/: data-decisions.html  data-decisions.md  eval-design.html  eval-design.md  limitations-and-future-work.html  limitations-and-future-work.md  methodology-guarantees.html  methodology-guarantees.md  model-rungs.html  model-rungs.md  reference-scorer-audit.html  reference-scorer-audit.md  reproducibility.html  reproducibility.md  threshold-policy.html  threshold-policy.md
_extensions/superseded-banner/: _extension.yml  filter.lua
analysis/v1.0.7_canonical/: ece_per_cell.csv  paired_tests.csv  per_source_rates.csv
artifacts/local/: phase3_inference_manifest_20260517.md
configs/profiles/: classical_fixtures.yaml
configs/rungs/: classical_floor.yaml  deberta_v3_base.yaml  frozen_probe.yaml  full_ft.yaml  lora.yaml
configs/runpod/: headline-deberta.yaml  headline-frozen_probe.yaml  headline-full_ft.yaml  headline-lora.yaml
data/: source_manifest.yaml
decisions/: ADR-001-submission-deadline-and-scope-ambition.html  ADR-001-submission-deadline-and-scope-ambition.md  ADR-002-deliverable-format-pdf-and-repo.html  ADR-002-deliverable-format-pdf-and-repo.md  ADR-003-repo-visibility-public.html  ADR-003-repo-visibility-public.md  ADR-004-reviewer-profile-and-hub-and-spoke-writeup.html  ADR-004-reviewer-profile-and-hub-and-spoke-writeup.md  ADR-005-methodology-principles.html  ADR-005-methodology-principles.md  ADR-006-headline-metrics-and-statistical-apparatus.html  ADR-006-headline-metrics-and-statistical-apparatus.md  ADR-007-rung-architecture-and-reference-scorers.html  ADR-007-rung-architecture-and-reference-scorers.md  ADR-008-data-scope-public-only-hybrid-splits.html  ADR-008-data-scope-public-only-hybrid-splits.md  ADR-009-process-mandates.html  ADR-009-process-mandates.md  ADR-010-scope-limits-with-extension-conditions.html  ADR-010-scope-limits-with-extension-conditions.md  ADR-011-methodology-guarantees.html  ADR-011-methodology-guarantees.md  ADR-012-soft-signals-and-artifact-engagement.html  ADR-012-soft-signals-and-artifact-engagement.md  ADR-013-kit-ratify-bulk-strictness-intake-notebook-persistence.html  ADR-013-kit-ratify-bulk-strictness-intake-notebook-persistence.md  ADR-014-threat-model-bundle.html  ADR-014-threat-model-bundle.md  ADR-015-rung-architecture-refinement.html  ADR-015-rung-architecture-refinement.md  ADR-016-data-design-bundle.html  ADR-016-data-design-bundle.md  ADR-017-trained-rung-slate-expansion.html  ADR-017-trained-rung-slate-expansion.md  ADR-018-reference-scorer-slate-and-contamination-stratification.html  ADR-018-reference-scorer-slate-and-contamination-stratification.md  ADR-019-lora-and-transformer-training-recipe.html  ADR-019-lora-and-transformer-training-recipe.md  ADR-020-compute-infrastructure-and-cost-discipline.html  ADR-020-compute-infrastructure-and-cost-discipline.md  (+129 more)
decisions/audits/: REPO_AUDIT_2026-05-18.md  REPO_AUDIT_2026-05-21.md
docs/: GLOSSARY.html  GLOSSARY.md  HYPERPARAMETER_DISCLOSURE.html  HYPERPARAMETER_DISCLOSURE.md  MANIFEST_SCHEMA.html  MANIFEST_SCHEMA.md  MISSION.html  MISSION.md  REPRODUCIBILITY.html  REPRODUCIBILITY.md  ROADMAP.html  ROADMAP.md  TECH_STACK.html  TECH_STACK.md  THREAT_MODEL.html  THREAT_MODEL.md  for-hiring-managers.html  for-hiring-managers.md  site-reader-map.html  site-reader-map.md
docs/eda/: phase4_training_validation.qmd
docs/plots/: F1.meta.json  F2.meta.json  F3.meta.json  F4.meta.json  F5.meta.json  F6.meta.json  F7.meta.json
docs/research/: MANIFEST.json  README.md
evals/: contamination_scan.json  cost_ledger.csv  data_audit.json  dedup_calibration.json  leakage_report.json  results.json
evals/audit/: cross_fold_ci_audit.parquet  mde_per_cell.parquet  numeric_audit.json  verification_reachability.json
evals/bootstrap/: marginal_cells.parquet  paired_cells.parquet  paired_cells_seed2.parquet
evals/manifests/: frozen-probe__fold0__seed42__epoch1.json  frozen-probe__fold0__seed42__epoch2.json  (+280 more)
notebooks/: 01_canonical_results.html  01_canonical_results.ipynb  01_canonical_results.py  02_frozen_vs_lora.html  02_frozen_vs_lora.ipynb  02_frozen_vs_lora.py  03_calibration.html  03_calibration.ipynb  03_calibration.py  04_ood_slate.html  04_ood_slate.ipynb  04_ood_slate.py  README.md
scripts/: audit_adr_count_claims.py  audit_citation_alignment.py  audit_internal_anchors.py  audit_leakage.py  audit_numbers.py  audit_reference_scorers.py  audit_rendered_site.py  audit_superseded_by_backlinks.py  audit_value_bindings.py  audit_writeup_numbers.py  backfill_provenance.py  build_dedup_holdout.py  build_results_json.py  calibrate_dedup.py  check_no_emoji.py  cost_rollup.py  eval_from_hub.py  export_analysis_csvs.py  extract_hackaprompt_templates.py  fit_dual_policy_thresholds.py  generate_fixtures.py  generate_model_cards.py  llm_prelabel_dedup_holdout.py  pin_source_manifest.py  publish_to_hub.py  regenerate_audit.py  render_figures.py  run_bootstrap_battery.py  run_cv_clt_ci.py  run_data_pipeline.py  run_deberta_ood_inference.py  run_inference_battery.py  run_marginal_bootstrap.py  run_mde.py  run_metrics_battery.py  run_val_inference.py  runpod_deploy_long_ssh.py  train_classical_floor.py  train_rung.py
src/: __init__.py
src/data/: __init__.py  (+6 more)
tests/: conftest.py  test_invariants.py
transcripts/: README.md
(+124 files in other folders)
