[project]
name = "prompt-injection-detection-prototype"
version = "0.0.0"
description = "Prompt-injection detection prototype: methodology case study"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    # Load-bearing libraries (no hand-rolling allowed — see SPEC_GREENFIELD §Tech-Stack).
    # Versions locked at Phase 0-08 per ADR-036 (tag pin + freeze for submission window).
    # Bump triggers limited to blocking upstream bug + critical security fix + post-submission patch per ADR-033.
    # v1.0.8: PyPI install per ADR-055 (narrow supersession of ADR-036 "git URL only" claim);
    # eval-toolkit published to PyPI starting v0.40.0 (2026-05-18) via Trusted Publishing OIDC.
    # v1.0.9 bump → v0.42.0 (2026-05-19) ships fit_isotonic_binary (eval-toolkit#44);
    # removes the v1.0.8 fit_isotonic_binary_local adapter per library-first invariant.
    # v1.2.8 bump → v0.43.0 (2026-05-19) P1 batch: closes #48 (ood_dataset_from_manifest),
    # #49 (character_injection core-6), #53 (ActivationDeltaProbe). Per Gate-1 rolling-bump
    # decision in eval-toolkit v0.43→v1.0 plan §Decision 9. Consumer-side ledger entries
    # tracking these resolutions live at decisions/upstream_issues.md.
    # v1.2.x bump → v0.44.0 (2026-05-19) defenses + losses: closes #50 (RecallAtLowFPR),
    # #51 (spotlighting — delimit/datamark/encode + sweep). New [losses] extra (torch>=2.0)
    # available but not pulled in by default; spotlighting is base-install safe (pure stdlib).
    # Per the staggered v1.0 plan (~/.claude/plans/evaluate-all-the-work-twinkly-kite.md,
    # Step 0 #5): rolling-bump observation closes the v0.44 leg of Gate 1.
    # v1.2.x bump → v0.45.0 (2026-05-21) stacking: closes #52 (MetaLearner Protocol +
    # LogisticStacker). First minor of the staggered v0.45 → v0.46 → v0.47 → v0.48 → v1.0
    # sequence. Non-breaking; purely additive. No new dependencies — sklearn already core.
    # Gate 2 streak continues (6/6 consecutive minors without Tier-2 Protocol-shape edits).
    # v1.2.x bump → v0.46.0 (2026-05-21) scorecard: closes #36 (primary v1.0 metric
    # surface). SOFT-BREAKING — top-level scalar metric imports (pr_auc, roc_auc,
    # brier_score, 5 ECE variants) emit DeprecationWarning. They remain reachable via
    # the __getattr__ shim until v0.47 hard-removal. Plan to migrate every callsite
    # of `from eval_toolkit import pr_auc` etc. to either `scorecard(...)["pr_auc"].value`
    # OR `from eval_toolkit.metrics import pr_auc` (internal API; no warning) BEFORE
    # bumping to v0.47. See docs/source/migration/v0.46.md for the migration recipes.
    # MetricSpec is the new Tier-2 Protocol added at v0.46 (frozen at v1.0 per ADR 0002).
    # v1.2.x bump → v0.46.1 (2026-05-21) Round 6 hotfix: ECE strategy validation +
    # deprecation warning content correctness. Closes Round 6 audit STOP-GATE per
    # Decision Y.2 — release/v0.47.0 can open after this bump observes 1 cycle.
    # Decision R6-E: scope is R6-F1 (ECE strategy raises ValueError) + R6-F2 (all 5
    # ECE deprecation warnings carry correct snippets w/ pre-v0.46 n_bins=10 default
    # per R6-F + submodule-path template for non-first-party variants per R6-G).
    # v1.2.x bump → v0.47.0 (2026-05-21) Sweep unification + TextTransform +
    # advanced-6 + cleanup + Round 6 follow-on. SECOND BREAKING minor of the
    # staggered v0.45 → v0.46 → v0.46.1 → v0.47 → v0.48 → v1.0 sequence per
    # ~/.claude/plans/evaluate-all-the-work-twinkly-kite.md §Step 3. BREAKING
    # REMOVALS (must be cleaned up at consumer side BEFORE pin bump; see
    # docs/source/migration/v0.47.md for the full recipes):
    #   1. Top-level scalar metric imports (pr_auc, roc_auc, brier_score, all 5
    #      expected_calibration_* variants) — the v0.46 __getattr__ shim is
    #      DELETED at v0.47. Submodule path
    #      `from eval_toolkit.metrics import pr_auc` still works (internal API
    #      per ADR 0002, stable across v1.x).
    #   2. Module-level adversarial.sweep + preprocessing.sweep — consolidated
    #      into top-level `eval_toolkit.sweep(strategies, texts, *,
    #      scorer=None, attack_threshold=None)`.
    #   3. character_injection + spotlighting SimpleNamespace shortcuts — use
    #      the concrete dataclass or functional API.
    #   4. CharacterInjectionStrategy per-module Protocol — replaced by
    #      top-level TextTransform (9th strict Tier-2 Protocol).
    # ADDITIONS: 6 advanced character-injection techniques (BidiRTLInjection,
    # TagStrippingInjection, SynonymSubstitution, TokenSplitting,
    # UnicodeNormalization, InvisibleCharsInjection) → ALL_TECHNIQUES is the
    # 12-tuple. metric_specs.make_spec_name() helper. Round 6 follow-on:
    # duplicate-name guard in scorecard(), to_pandas n_resamples+method cols,
    # Protocol method-shape drift guard. Round 7 audit STOP-GATE per Decision
    # Y.2 opens against this state.
    "eval-toolkit==0.47.0",
    # runpod-deploy is a LOCAL orchestrator — invoked from the operator's machine via
    # `make headline-*` Makefile targets; the pod itself never imports it. Moved to
    # [project.optional-dependencies] dev per runpod-deploy validator scan finding
    # (2026-05-17 Phase 4 close); main-deps inclusion was a noop that added install
    # surface to every pod sync.
    "research_toolkit @ git+https://github.com/brandon-behring/research_toolkit@v1.9.1",
    # Phase 1 (Data) deps per ADR-041 — manifest infra (Commit 1) + loaders (Commit 2)
    # + dedup encoder (Commit 3) + splits + audit (Commits 4-5).
    "huggingface_hub>=0.25",
    "pyyaml>=6",
    "datasets>=3.0",
    "pandas>=2.2",
    "pyarrow>=17",
    "sentence-transformers>=3.0",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    # OpenAI judge for LLM-pre-label dedup bootstrap (per ADR-042); same snapshot as ADR-018 headline rater.
    "openai>=1.50",
    # Phase 2 (Training) deps per ADR-019 + ADR-020 + ADR-044 — transformer rung primitives.
    # ModernBERT-base requires transformers>=4.48.
    "transformers>=4.48",
    "peft>=0.13",
    "torch>=2.5",
    "accelerate>=1.0",
    # v1.1.2 Phase D add (ADR-060 carryforward): DeBERTa-v3-base ships a SentencePiece
    # vocab; transformers AutoTokenizer can't deserialize spm.model without this
    # backend installed in the venv. Surfaced as ImportError mid-fire 1 (~$0.13
    # GPU cost burned) — adding the dep here makes the pod's `uv sync --extra dev`
    # install it on next fire. ModernBERT uses a BPE tokenizer that doesn't need it.
    "sentencepiece>=0.2",
    # transformers' SentencePieceExtractor (slow->fast tokenizer conversion path)
    # invokes `requires_backends(self, "protobuf")` independent of sentencepiece;
    # protobuf is needed to PARSE the spm.model file. Surfaced as a second
    # ImportError on fire 1 retry-3 (after sentencepiece was already added).
    # Both deps required by DeBERTa-v3-base tokenizer load via AutoTokenizer.
    "protobuf>=4.0",
    # Phase 3 (Evaluation) deps per ADR-018 + ADR-045 — reference scorers + pydantic contracts.
    # pydantic v2 used for src/eval/schemas.py per ADR-045 Q7.
    "pydantic>=2.5",
    # anthropic client for claude-sonnet-4-6 LLM judge per ADR-018.
    "anthropic>=0.40",
    # Phase 4 (Analysis) deps per ADR-046 Q6 — figures library-first hybrid.
    # eval_toolkit.plotting requires matplotlib; SVG output to docs/plots/ per ADR-030.
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.8",
    "pytest>=8",
    "pytest-cov>=4",
    "pyyaml>=6",
    "types-PyYAML>=6",
    "pandas-stubs>=2.2",
    # Local-only orchestrator — invoked from the operator's machine via
    # `make headline-*` / `make headline-dry-run`. Pinned per ADR-036 (tag-pin
    # + freeze for submission window). Pod never imports it.
    # v1.1.0 bump → v0.8.4 PyPI per ADR-059 (narrow supersession of ADR-036
    # for runpod-deploy spec format; mirrors ADR-055 for eval-toolkit). v0.8.3+
    # REMOVED legacy stop: schema → lifecycle: required (configs migrated in
    # Commit 1 of 3). Consumes #88 (budget.ssh_ready_timeout_sec) + #90
    # (lifecycle.on_success: recycle for DeBERTa) + #97 (validate --check-image-registry).
    "runpod-deploy==0.8.4",
]
notebook = [
    "jupyter>=1",
    "jupytext>=1.17",
    "nbconvert>=7.16",
    "nbstripout>=0.7",
    "nbval>=0.11",
    "ipykernel>=6.30",
]

[tool.jupytext.formats]
"notebooks/" = "ipynb"
"notebooks/_jupytext/" = "py:percent"

# Pin torch to a CUDA-12.8 wheel via the pytorch-cu128 index.
# RunPod pods (as of 2026-05) support CUDA up to 12.8; newer torch wheels
# from default PyPI can resolve to a CUDA build that fails torch.cuda.is_available()
# silently despite the GPU being functional. Surfaced by `runpod-deploy validate`
# at Phase 4 close on the headline-* configs (see ADR-049 + docs/runpod-gotchas.md
# pattern referenced from the runpod-deploy preflight scan).
# `explicit = true` prevents uv from transparently pulling torch from this index
# for any other package; only direct dispatch via [tool.uv.sources] uses it.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[tool.ruff]
line-length = 100
# v1.2.8: notebooks/_jupytext/*.py are jupytext-paired percent-format
# scripts; cells can have local imports (E402) and other notebook-friendly
# patterns that don't fit module-style code. ruff scans skip notebooks/.
extend-exclude = ["notebooks"]

[tool.mypy]
strict = true

# Some upstreams do not ship pep-561 stubs; suppress missing-imports here so
# the rule works identically in local mypy + pre-commit hook env.
# Cloned upstream sources under data/raw/git/ produce duplicate-module errors
# (e.g., bipia/benchmark/{qa,abstract}/process.py). data/raw/ is gitignored
# and reserved per ADR-026 / ADR-044 Q2; exclude from strict scan.
exclude = [
    "data/raw/.*",
    "data/processed/.*",
    ".hf_cache/.*",
    "_site/.*",
    # v1.0.7: notebooks are jupytext-paired exploratory artifacts;
    # cells use untyped pandas/numpy operations + are pre-rendered
    # with frozen output cells per /exploring-options batch 9 Q2 lock.
    # mypy strict on these would require explicit type annotations
    # on every dataframe operation (mission creep for exploratory code).
    "notebooks/.*",
]

[[tool.mypy.overrides]]
module = [
    "datasets",
    "sentence_transformers",
    "sklearn.*",
    "transformers",
    "transformers.*",
    "peft",
    "peft.*",
    "accelerate",
    "accelerate.*",
    "anthropic",
    "anthropic.*",
    "eval_toolkit",
    "eval_toolkit.*",
    "scipy",
    "scipy.*",
    "matplotlib",
    "matplotlib.*",
    "runpod_deploy",
    "runpod_deploy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: fast, deterministic unit tests",
    "smoke: end-to-end smoke tests (~5 min)",
    "integration: integration tests (may need network or GPU)",
    "network: tests that require network access",
]
